get all the input data and get weather information

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section class="weather-info">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">City name</h1>
-              <p class="lead">weather information goes here</p>
+              <h1 class="display-4" id="cityName"></h1>
+              <p class="lead"></p>
             </div>
           </div>
     </section>
