if stored data is not null, then show the data on the screen

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <section class="weather-info">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4" id="cityName"></h1>
-              <p class="lead"></p>
+              <h1 class="display-4" id="cityName" style="color: rgb(153, 170, 184);">City</h1>
+              <div class="lead">
+                  <p>Temperature : <span class="temp"></span></p>
+                  <p>Humidity : <span class="humidity"></span></p>
+                  <p>Wind Speed : <span class="speed"></span></p>
+              </div>
             </div>
           </div>
     </section>
