--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   <p>Temperature : <span class="temp"></span></p>
                   <p>Humidity : <span class="humidity"></span></p>
                   <p>Wind Speed : <span class="speed"></span></p>
+                  <p>UV index : <span class="uvIndex"></span></p>
               </div>
             </div>
           </div>
