--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="container">
               <h1 class="display-4" id="cityName" style="color: rgb(153, 170, 184);">City</h1>
               <div class="lead">
-                  <p>Temperature : <span class="temp"></span></p>
-                  <p>Humidity : <span class="humidity"></span></p>
-                  <p>Wind Speed : <span class="speed"></span></p>
+                  <p>Temperature : <span class="temp"></span> &#8457;</p>
+                  <p>Humidity : <span class="humidity"></span> %</p>
+                  <p>Wind Speed : <span class="speed"></span> MPH</p>
                   <p>UV index : <span class="uvIndex"></span></p>
               </div>
             </div>
