userInput from search box display on the screen after click button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
             </div>
         </div>
+        <div class="search-log"></div>
     </section>
     <section class="weather-info">
         <div class="jumbotron jumbotron-fluid">
