--- a/index.html
+++ b/index.html
@@ -12,43 +12,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
 </head>
-<body id="container">
-    <header>
-        <div>WEATHER DASHBOARD</div>
-    </header>
-    <section class="search-box">
-        <p class="search-head">Search for a City</p>
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="City Name" aria-label="City Name">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                  </svg>
-              </button>
-            </div>
-        </div>
-        <div class="search-log"></div>
-    </section>
-    <section class="weather-info">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="infoWrap">
-              <h1 class="display-4" id="cityName">City</h1>
-              <div class="lead">
-                  <p>Temperature : <span class="temp"></span></p>
-                  <p>Humidity : <span class="humidity"></span></p>
-                  <p>Wind Speed : <span class="speed"></span></p>
-                  <p>UV index : <span class="uvIndex"></span></p>
-              </div>
-            </div>
-          </div>
-    </section>
-    <div class='forecastWrap'>
-        <p id="forecast-head">5 Days Forecast</p>
-        <section class="5-day-forecast">
+<body>
+    <div class="container">
+        <header class="row">
+            <div class="col-lg-12">WEATHER DASHBOARD</div>
+        </header>
+        <section class="bodyWrap row">
+            <section class="search-box col-lg-4 px-0">
+                <p class="search-head">Search for a City</p>
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="City Name" aria-label="City Name">
+                    <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                        </svg>
+                    </button>
+                    </div>
+                </div>
+                <div class="search-log"></div>
+            </section>
+            <section class="jumbotron jumbotron-fluid col-lg-8" id="cityWrap">
+                <h1 class="display-4" id="cityName">City</h1>
+                <div class="lead">
+                    <p>Temperature : <span class="temp"></span></p>
+                    <p>Humidity : <span class="humidity"></span></p>
+                    <p>Wind Speed : <span class="speed"></span></p>
+                    <p>UV index : <span class="uvIndex"></span></p>
+                </div>
+            </section>
         </section>
-        <script src="./assets/script.js"></script>
+        <div class='forecastWrap row'>
+            <p class="col-lg-12" id="forecast-head">5 Days Forecast</p>
+            <section class="5-day-forecast col-12">
+            </section>
+            <script src="./assets/script.js"></script>
+        </div>
     </div>
-    </body>
+</body>
 </html>
