auto focus on the input search box in every page reload

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <section class="bodyWrap row">
             <section class="search-box col-lg-4 px-0">
-                <p class="search-head focus">Search for a City</p>
+                <p class="search-head">Search for a City</p>
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="City Name" aria-label="City Name">
                     <div class="input-group-append">
