larger the size of weather icon | change bacground color on each section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </section>
         </section>
-        <div class='forecastWrap row'>
+        <div class='row' id="forecastWrap">
             <p class="col-lg-12" id="forecast-head">5 Days Forecast</p>
             <section class="5-day-forecast col-12">
             </section>
